--- a/styles.css
+++ b/styles.css
@@ -24,19 +24,50 @@ body{
 
 }
 .top-left h1, h2 {
-    margin: 0;
-    color:red;
-
+    margin: 0px;
+    color:black;
+    font-family: sans-serif;
+    font-size: 25px;
+}
+.top-left h1{
+    margin-top: 10px;
+}
+.top-left i{
+    font-size: 40px;
+    margin: 10px;
+    margin-top: 17px;
+    margin-left: 15px;
+    
 }
 .image img {
    width: 500px;
-   height: 400px;
+   height: 350px;
    object-fit:cover;
    object-position: center;
+   margin-top: 10px;
     
 }
 .icons {display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    font-size: 30px;
+    margin-left: 10px;
+    margin-right: 20px;
+    margin-top: 15px;
+
 }
+p {
+    font-family:sans-serif;
+    font-size: 16px;
+    text-align:justify;
+    margin: 13px;
+    margin-top: 25px;
+}
+.top-right {
+    font-size: 35px;
+    margin-right: 20px;
+}
+
+
+    
